--- a/ffmpeg-server/render.yaml
+++ b/ffmpeg-server/render.yaml
@@ -2,7 +2,10 @@ services:
   - type: web
     name: ffmpeg-server
     env: python
-    buildCommand: pip install -r requirements.txt
+   buildCommand: |
+  apt-get update
+  apt-get install -y ffmpeg
+  pip install -r requirements.txt   
     startCommand: python app.py
     envVars:
       - key: PYTHONUNBUFFERED
