--- a/ffmpeg-server/render.yaml
+++ b/ffmpeg-server/render.yaml
@@ -6,7 +6,7 @@ services:
   apt-get update
   apt-get install -y ffmpeg
   pip install -r requirements.txt   
-    startCommand: python app.py
+    startCommand:startCommand: gunicorn app:app --bind 0.0.0.0:5000
     envVars:
       - key: PYTHONUNBUFFERED
         value: "true"
