--- a/video-generation/Dockerfile
+++ b/video-generation/Dockerfile
@@ -1,23 +1,24 @@
 FROM python:3.11-slim
 
-# Install FFmpeg
-RUN apt-get update && apt-get install -y ffmpeg && \
+# Install FFmpeg and system dependencies
+RUN apt-get update && \
+    apt-get install -y ffmpeg && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Set work directory
+# Set the working directory
 WORKDIR /app
 
-# Copy project files
+# Copy all project files to the container
 COPY . .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir flask gunicorn
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Make sure the folders exist
+# Create necessary folders
 RUN mkdir -p videos static/output
 
-# Expose port
+# Expose the port your app will run on
 EXPOSE 10000
 
-# Start the app
+# Start the Flask app using Gunicorn
 CMD ["gunicorn", "-b", "0.0.0.0:10000", "app:app"]
